--- a/TotalCrossVM/builders/vc2013/TCVM/TCVM.vcxproj.filters
+++ b/TotalCrossVM/builders/vc2013/TCVM/TCVM.vcxproj.filters
@@ -693,6 +693,12 @@
     <ClCompile Include="..\..\..\src\tcvm\wp8\ThreadEmulation.cpp">
       <Filter>VM Files\wp8</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\src\nm\ui\wp8\CubeRenderer.cpp">
+      <Filter>Native methods\ui\wp8</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\nm\ui\wp8\Direct3DBase.cpp">
+      <Filter>Native methods\ui\wp8</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WindowsPhoneRuntimeComponent1.h" />
@@ -1174,6 +1180,15 @@
     <ClInclude Include="..\..\..\src\event\wp8\specialkeys_c.h">
       <Filter>Event\wp8</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\src\nm\ui\wp8\CubeRenderer.h">
+      <Filter>Native methods\ui\wp8</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\src\nm\ui\wp8\Direct3DBase.h">
+      <Filter>Native methods\ui\wp8</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\src\nm\ui\wp8\DirectXHelper.h">
+      <Filter>Native methods\ui\wp8</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\..\..\src\nm\NativeMethods.txt">
@@ -1199,5 +1214,13 @@
     <None Include="..\..\..\src\nm\ui\darwin\Window_c.m">
       <Filter>Native methods\ui\darwin</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="..\..\..\src\nm\ui\wp8\PixelShaderGlobalColor.hlsl">
+      <Filter>Native methods\ui\wp8</Filter>
+    </FxCompile>
+    <FxCompile Include="..\..\..\src\nm\ui\wp8\VertexShaderGlobalColor.hlsl">
+      <Filter>Native methods\ui\wp8</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
