--- a/LitebaseSDK/builders/vc2013/litebase.vcxproj
+++ b/LitebaseSDK/builders/vc2013/litebase.vcxproj
@@ -313,10 +313,10 @@
     <ClCompile>
       <Optimization>MaxSpeed</Optimization>
       <InlineFunctionExpansion>OnlyExplicitInline</InlineFunctionExpansion>
-      <AdditionalIncludeDirectories>$(SolutionDir)/../../../../Litebase/LitebaseSDK/src/native;$(SolutionDir)/../../../../Litebase/LitebaseSDK/src/native/parser;$(SolutionDir)/../../src/nm/io;$(SolutionDir)/../../src/nm/lang;$(SolutionDir)/../../src/util;$(SolutionDir)/../../src/tcvm;$(SolutionDir)/../../src/nm/ui/wp8;P:\gitrepo\angleproject\samples\gles2_book\Common;P:\gitrepo\angleproject\include;P:\gitrepo\angleproject\src\common;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)/../../../../Litebase/LitebaseSDK/src/native;$(SolutionDir)/../../../../Litebase/LitebaseSDK/src/native/parser;$(SolutionDir)/../../src/nm/io;$(SolutionDir)/../../src/nm/lang;$(SolutionDir)/../../src/util;$(SolutionDir)/../../src/tcvm;$(SolutionDir)/../../src/nm/ui/wp8;P:\gitrepo\angleproject\samples\gles2_book\Common;P:\gitrepo\angleproject\include;P:\gitrepo\angleproject\src\common;$(SolutionDir)/../../src/tcvm/wp8;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>LB_EXPORTS;LITTLE_ENDIAN;WIN32;WP8;DEBUG;_DEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS;WINAPI_FAMILY=WINAPI_FAMILY_PHONE_APP;UNICODE;_UNICODE;_WINDLL;_USRDLL;$(PlatformTarget)</PreprocessorDefinitions>
       <StringPooling>true</StringPooling>
-      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <StructMemberAlignment>4Bytes</StructMemberAlignment>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <PrecompiledHeaderOutputFile>$(IntDir)litebase.pch</PrecompiledHeaderOutputFile>
@@ -371,7 +371,7 @@
       <AdditionalIncludeDirectories>$(SolutionDir)/../../../../Litebase/LitebaseSDK/src/native;$(SolutionDir)/../../../../Litebase/LitebaseSDK/src/native/parser;$(SolutionDir)/../../src/nm/io;$(SolutionDir)/../../src/nm/lang;$(SolutionDir)/../../src/util;$(SolutionDir)/../../src/tcvm;$(SolutionDir)/../../src/nm/ui/wp8;P:\gitrepo\angleproject\samples\gles2_book\Common;P:\gitrepo\angleproject\include;P:\gitrepo\angleproject\src\common;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>LB_EXPORTS;LITTLE_ENDIAN;WIN32;WP8;DEBUG;_DEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS;WINAPI_FAMILY=WINAPI_FAMILY_PHONE_APP;UNICODE;_UNICODE;_WINDLL;_USRDLL;$(PlatformTarget)</PreprocessorDefinitions>
       <StringPooling>true</StringPooling>
-      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <StructMemberAlignment>4Bytes</StructMemberAlignment>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <PrecompiledHeaderOutputFile>$(IntDir)litebase.pch</PrecompiledHeaderOutputFile>
